# AI_DJ

./: .gitignore  README.md  ai-dj-llm-log.json  install-icecast.ps1  install-service.ps1  pyproject.toml  requirements.txt
ai_dj/: __init__.py  claude_config.py  cli.py  gemini_config.py  llm.py  playlist.py  resolve.py  scan.py  selector.py  server.py  webapp.py  workout.py
ai_dj/web/: index.html
workouts/: steady-into-tempo.txt
